
Sat Mar 25 17:15:37 GMT 2000
(gilbertt)

I suspect this would be necessary too.


-------------------------------------------------------------------------------

Sat Mar 25 23:17:57 GMT 2000
(gilbertt)

Fixed a bug where the winops menu always appeared at the top of the screen,
if "keep menus onscreen" was selected.

At some point, the menu location calcs ended up before the XQueryPointer, so
uninitialised values were being used.


-------------------------------------------------------------------------------

Sat Mar 25 23:31:02 GMT 2000
(gilbertt)

Another fine patch from Marius Eriksen <marius@linux.com>. Gives windows the
focus when they are cycled through in the focuslist. Enabled by default, as  
it's nice behaviour, but toggleable of course =)


-------------------------------------------------------------------------------

Sat Mar 25 17:32:16 PST 2000
(Mandrake)

This is still slightly hacking xinerama support - needs some more work.
some things will still pop up inbetween heads, but for the most part windows
will pop up on the head that is currently focused and will pop up without
going between heads.


-------------------------------------------------------------------------------

Sat Mar 25 18:16:11 PST 2000
(Mandrake)

slightly better arranger code for XINERAMA - this should ALSO fix a couple of
KDE arranger problems that people reported, too.

-------------------------------------------------------------------------------

Sat Mar 25 18:17:32 PST 2000
(Mandrake)

oops, left a debugging printf in arrange.c

-------------------------------------------------------------------------------

Sat Mar 25 20:51:51 PST 2000
(Mandrake)

more xinerama support.  This time settings dialogs pop up centered on the
current head if there isn't a settings dialog already open.
Next - edge resistance between heads.

-------------------------------------------------------------------------------

Sat Mar 25 20:58:49 PST 2000
(Mandrake)

oops, debugging printfs